--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
 
     <div id="valentine-screen" class="screen hidden">
-        <img src="assets/Sailor Moon Love GIF.gif" class="main-gif">
+        <img src="assets\onePieceBoa.gif" class="main-gif">
         <h1 class="fancy-title" id="t-question">Will you be my Valentine? 🌹</h1>
         
         <div class="button-container">
