--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <div id="envelope-screen" class="screen hidden">
         <h1 class="fancy-title" id="t-yay">Yay! I knew it! 💖</h1>
-        <img src="assets/giphy.gif" class="main-gif" style="width: 150px;">
+        <img src="assets\onePieceLuffy.gif" class="main-gif" style="width: 150px;">
         <p id="t-click-env">I wrote something for you... (Click the envelope)</p>
         <img src="assets/envelope.png" id="envelope-img" onclick="openLetter()">
     </div>
@@ -188,15 +188,15 @@
                 skip: "Skip >>"
             },
             ES: {
-                welcome: "Bienvenida, mi amor 💖",
+                welcome: "Bienvenida, mi amorcita 💖",
                 enterPass: "Ingresa la palabra mágica:",
                 unlock: "Desbloquear",
                 question: "¿Quieres ser mi San Valentín? 🌹",
                 yes: "¡SÍ! 💖",
                 no: "No 😢",
-                yay: "¡Siii! ¡Sabía que dirías que sí! 💖",
+                yay: "¡Siii! ¡Ayyy Mi Amor! 💖",
                 clickEnv: "Escribí algo para ti... (Haz clic en el sobre)",
-                forYou: "Para Nashley 💌",
+                forYou: "Para LEE 💌",
                 kiss: "Dame un beso 💋",
                 toggle: "ENGLISH",
                 skip: "Saltar >>"
